example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxsample
  namespace: example-traefik-v2
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
